Patch from Evan: prevent content from getting wrapped in header cell.  Refs #11104 !strict
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@22438 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/grid/resources/Grid.css
+++ b/grid/resources/Grid.css
@@ -89,12 +89,18 @@
 	border-bottom-width: 3px;
 }
 
+.dojoxGridSortNode{
+	white-space:nowrap;
+}
 .dojoxGridArrowButtonNode {
 	display: none;
 	padding-left: 16px;
 }
 .dojoxGridArrowButtonChar {
 	display:inline;
+}
+.dojoxGridColCaption {
+	overflow:hidden;
 }
 
 /* Need to explicitly define how to treat hovering over the arrow on IE */ 
